Adding tasks to deploy the Site and Site Profile (only works after creating a site)

--- a/scripts/configure_event_settings.cls
+++ b/scripts/configure_event_settings.cls
@@ -18,4 +18,7 @@ public static void initializeEventSampleData(){
     );
     insert testEventInstance;
 
+    UST_Event_Settings__c eventSettings = UST_Event_Settings__c.getOrgDefaults();
+    insert eventSettings;
+
 }
